force-app/main/default/objects/sumoapp__CacheSetting__c/sumoapp__CacheSetting__c.object-meta.xml
<CustomObject>
    <label>SUMO Cache Setting</label>
    <nameField>
        <displayFormat>SCN-{00000}</displayFormat>
        <label>SUMO Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Cache Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>