force-app/main/default/objects/sumoapp__CacheSetting__c/fields/sumoapp__EventBuilderCacheSettings__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventBuilderCacheSettings__c</fullName>
    <label>Event Builder Cache Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>