force-app/main/default/objects/sumoapp__CacheSetting__c/fields/sumoapp__EventCalendarCacheSettings__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventCalendarCacheSettings__c</fullName>
    <label>Event Calendar Cache Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>